tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@unknown_path_in_set.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/unknown_path_in_set.txt
---
error: Variable `unknown` is not defined
 --> unknown_path_in_set.txt:1:13
  |
1 | {% set foo = unknown.username %}
  |              ^^^^^^^
